full version without single page details

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <title>EPI-Comes and receive our service</title>
     <!-- for shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="img/VITI-Logo.png">
+    <link rel="shortcut icon" type="image/png" href="img/epa.jpg">
     <!-- for various language -->
     <meta charset="utf-8">
     <!-- for author -->
@@ -46,7 +46,7 @@
     <!-- start navigation  -->
     <nav class="navbar res-nav navbar-dark bg-transparent navbar-expand-md fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/cropped-Logo.png" alt="logo"></a>
+        <a href="index.html" class="navbar-brand"><img src="img/epa.jpg" alt="logo"></a>
         <button class="navbar-toggler navbr-toggler-right" data-toggle='collapse' data-target='#navbarNav'>
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +57,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="chemical.html">Chemical</a>
+                <a class="dropdown-item" href="chemical.html">Resin / Petrosin</a>
                 <a class="dropdown-item" href="drier.html">Drier</a>
                 <a class="dropdown-item" href="ink.html">Ink industries</a>
-                <a class="dropdown-item" href="pretrosin.html">Petrosin</a>
               </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="gallary.html">Gallery</a></li>
