--- a/chemical.html
+++ b/chemical.html
@@ -3,7 +3,7 @@
   <head>
     <title>EPI-Comes and receive our service</title>
     <!-- for shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="img/VITI-Logo.png">
+    <link rel="shortcut icon" type="image/png" href="img/epa.jpg">
     <!-- for various language -->
     <meta charset="utf-8">
     <!-- for author -->
@@ -46,7 +46,7 @@
     <!-- start navigation  -->
     <nav class="navbar res-nav navbar-dark bg-transparent navbar-expand-md fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/cropped-Logo.png" alt="logo"></a>
+        <a href="index.html" class="navbar-brand"><img src="img/epa.jpg" alt="logo"></a>
         <button class="navbar-toggler navbr-toggler-right" data-toggle='collapse' data-target='#navbarNav'>
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +57,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="chemical.html">Chemical</a>
+                <a class="dropdown-item" href="chemical.html">Resin / petrosin</a>
                 <a class="dropdown-item" href="drier.html">Drier</a>
                 <a class="dropdown-item" href="ink.html">Ink industries</a>
-                <a class="dropdown-item" href="pretrosin.html">Petrosin</a>
               </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="gallary.html">Gallery</a></li>
@@ -79,7 +78,7 @@
 	      <div class="col py-5 mt-5">
 	        <h2 class="text-light">CHEMICAL ITEM</h2>
 	        <p class="lead">
-	          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, alias?
+	          
 	        </p>
 	      </div>
 	    </div>
@@ -102,10 +101,10 @@
             <div class="card" >
               <img src="img/taiwan-petrosin.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">TAIWAN PETROSIN</h5>
+                <h5 class="card-title">ALKYD RESIN</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-25kg</p>
-                <a href="tai-petro.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-200kg</p>
+                <a href="chemical/alkydresin.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -113,10 +112,10 @@
             <div class="card">
               <img src="img/dark-resin.png" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">CHINA PETROSIN</h5>
+                <h5 class="card-title">COTTON 1/2 SEC</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-25kg</p>
-                <a href="china-petro.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-120kg</p>
+                <a href="chemical/cotton12.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -124,10 +123,10 @@
             <div class="card">
               <img src="img/drier-1.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">COBALT DRIER</h5>
+                <h5 class="card-title">COTTON 30 SEC</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-227kg</p>
-                <a href="cobalt.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-105kg</p>
+                <a href="chemical/cotton30.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -135,10 +134,10 @@
             <div class="card" >
               <img src="img/lead.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">LEAD DRIER</h5>
+                <h5 class="card-title">COTTON 40 SEC</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-200kg</p>
-                <a href="lead.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-105kg</p>
+                <a href="chemical/cotton40.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -146,10 +145,10 @@
             <div class="card">
               <img src="img/petroleum.png" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">PETROLEUM JELLY</h5>
+                <h5 class="card-title">EMULSION 3061</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="lead">Packing-200kg</p>
-                <a href="petroleum.html" class="btn btn-outline-info mt-3">View more</a>
+                <a href="chemical/emulsion3061.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -157,10 +156,208 @@
             <div class="card">
               <img src="img/calcium.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">CALCIUM DRIER</h5>
+                <h5 class="card-title">EMULSION 3518</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="lead">Packing-200kg</p>
-                <a href="calcium.html" class="btn btn-outline-info mt-3">View more</a>
+                <a href="chemical/emulsion3518.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">GUM DAMAR A GRADE</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-40kg</p>
+                <a href="chemical/gdamara.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">GUM DAMAR AB GRADE</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-40kg</p>
+                <a href="chemical/gdamarab.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card" >
+              <img src="img/taiwan-petrosin.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">GUM DAMAR POWDER</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-40kg</p>
+                <a href="chemical/gmdpoeder.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/dark-resin.png" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">GUM COPAL PWS</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-20kg</p>
+                <a href="chemical/gumcopalpws.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/drier-1.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">LITHUPHONE GLORY</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/lithu.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card" >
+              <img src="img/lead.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">MELAMINE RESIN</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/melamine.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/petroleum.png" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">MITSU PETROSIN</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/mitsup.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">MTT</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-200kg</p>
+                <a href="chemical/mtt.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">NINGBO PETROSIN</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/ningbop.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">PETROLEUM JELLY</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-170kg</p>
+                <a href="chemical/petroleumj.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">SHORT OIL ALKYD RESIN</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-190kg/200kg</p>
+                <a href="chemical/shortoil.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">TAIWAN PETROSIN</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/taiwanp.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">TEXAPOR</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/texapor.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">TITINIUM 202</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/titinium202.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">TITINIUM 404</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/titinium404.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">TITINIUM 828</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="chemical/titinium828.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">VINYL RESIN MVAH</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-170kg</p>
+                <a href="chemical/vinylresin.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">ZIRCONIUM 18%</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-170kg</p>
+                <a href="chemical/zirconium18.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
