--- a/ink.html
+++ b/ink.html
@@ -3,7 +3,7 @@
   <head>
     <title>EPI-Comes and receive our service</title>
     <!-- for shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="img/VITI-Logo.png">
+    <link rel="shortcut icon" type="image/png" href="img/epa.jpg">
     <!-- for various language -->
     <meta charset="utf-8">
     <!-- for author -->
@@ -46,7 +46,7 @@
     <!-- start navigation  -->
     <nav class="navbar res-nav navbar-dark bg-transparent navbar-expand-md fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/cropped-Logo.png" alt="logo"></a>
+        <a href="index.html" class="navbar-brand"><img src="img/epa.jpg" alt="logo"></a>
         <button class="navbar-toggler navbr-toggler-right" data-toggle='collapse' data-target='#navbarNav'>
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +57,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="chemical.html">Chemical</a>
+                <a class="dropdown-item" href="chemical.html">Resin / petrosin</a>
                 <a class="dropdown-item" href="drier.html">Drier</a>
                 <a class="dropdown-item" href="ink.html">Ink industries</a>
-                <a class="dropdown-item" href="pretrosin.html">Petrosin</a>
               </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="gallary.html">Gallery</a></li>
@@ -79,13 +78,12 @@
 	      <div class="col py-5 mt-5">
 	        <h2 class="text-light">INK ITEM</h2>
 	        <p class="lead">
-	          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, alias?
+	          
 	        </p>
 	      </div>
 	    </div>
 	</section>
 	<!--end page title -->
-      <!-- product start -->
     <section class="home-blog">
       <div class="container">
         <!-- sliding social media start-->
@@ -97,15 +95,16 @@
           </div>
         </div>
         <!-- sliding social media end-->
+       <!-- product start -->
         <div class="row">
           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
             <div class="card" >
               <img src="img/taiwan-petrosin.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">TAIWAN PETROSIN</h5>
+                <h5 class="card-title">ALUMUNIUM PASTE H</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="lead">Packing-25kg</p>
-                <a href="tai-petro.html" class="btn btn-outline-info mt-3">View more</a>
+                <a href="pigment/almuh15222.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -113,10 +112,10 @@
             <div class="card">
               <img src="img/dark-resin.png" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">CHINA PETROSIN</h5>
+                <h5 class="card-title">ALUMUNIUM PASTE LEAFING</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="lead">Packing-25kg</p>
-                <a href="china-petro.html" class="btn btn-outline-info mt-3">View more</a>
+                <a href="pigment/almuleafing.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -124,10 +123,10 @@
             <div class="card">
               <img src="img/drier-1.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">COBALT DRIER</h5>
+                <h5 class="card-title">ALUMUNIUM PASTE M</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-227kg</p>
-                <a href="cobalt.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/almum15333.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -135,10 +134,10 @@
             <div class="card" >
               <img src="img/lead.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">LEAD DRIER</h5>
+                <h5 class="card-title">ALUMUNIUM PASTE NON LEAFING</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-200kg</p>
-                <a href="lead.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/almunonleafl.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -146,10 +145,10 @@
             <div class="card">
               <img src="img/petroleum.png" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">PETROLEUM JELLY</h5>
+                <h5 class="card-title">CC FINE PASTE BLACK 683</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-200kg</p>
-                <a href="petroleum.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccblack683.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -157,10 +156,219 @@
             <div class="card">
               <img src="img/calcium.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">CALCIUM DRIER</h5>
+                <h5 class="card-title">CC FINE PASTE BLUE 615</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-200kg</p>
-                <a href="calcium.html" class="btn btn-outline-info mt-3">View more</a>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccblue615.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CC FINE PASTE GREEN 631</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccgreen631.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CC FINE PASTE ORANGE 535</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccorange535.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card" >
+              <img src="img/taiwan-petrosin.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CC FINE PASTE PINK 547</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccpink547.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/dark-resin.png" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CC OXIDE RED 421 </h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccred421.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/drier-1.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CC FINE PASTE RED 548</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccred548.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card" >
+              <img src="img/lead.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CC OXIDE YELLOW 401</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccyellow401.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/petroleum.png" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CC FINE PASTE YELLOW 517</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/ccyellow517indo.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">EVERBRIGHT D BLUE</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/evdblue.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">EVERBRIGHT H RED</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/evhred.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">EVERBRIGHT H YELLOW</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/evhyellow.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">EVERBRIGHT MAROON</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/evmaroon.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">EVERBRIGHT ORANGE</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/evorange.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">EVERBRIGHT RED TONER C</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/evredtonerc.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">EVERBRIGHT RUBINE</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-10kg</p>
+                <a href="pigment/evrubine.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">KITONIC</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/kitonicindia.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">MEGAFAST BLUE</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/megablue909.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">MEGAFAST GREEN</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/megagreen787.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">MIDDLE CHROME LMF</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/middlechromelmf.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">RUBINE BLUE</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="pigment/rubineblue.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
