--- a/cobalt.html
+++ b/cobalt.html
@@ -57,10 +57,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="chemical.html">Chemical</a>
+                <a class="dropdown-item" href="chemical.html">Resin / petrosin</a>
                 <a class="dropdown-item" href="drier.html">Drier</a>
                 <a class="dropdown-item" href="ink.html">Ink industries</a>
-                <a class="dropdown-item" href="pretrosin.html">Petrosin</a>
               </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="gallary.html">Gallery</a></li>
