--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <title>EPI-Comes and receive our service</title>
     <!-- for shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="img/VITI-Logo.png">
+    <link rel="shortcut icon" type="image/png" href="img/epa.jpg">
     <!-- for various language -->
     <meta charset="utf-8">
     <!-- for author -->
@@ -46,7 +46,7 @@
     <!-- start navigation  -->
     <nav class="navbar res-nav navbar-dark bg-transparent navbar-expand-md fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/cropped-Logo.png" alt="logo"></a>
+        <a href="index.html" class="navbar-brand"><img src="img/epa.jpg" alt="logo"></a>
         <button class="navbar-toggler navbr-toggler-right" data-toggle='collapse' data-target='#navbarNav'>
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +57,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="chemical.html">Chemical</a>
+                <a class="dropdown-item" href="chemical.html">Resin / petrosin</a>
                 <a class="dropdown-item" href="drier.html">Drier</a>
                 <a class="dropdown-item" href="ink.html">Ink industries</a>
-                <a class="dropdown-item" href="pretrosin.html">Petrosin</a>
               </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="gallary.html">Gallery</a></li>
@@ -75,6 +74,7 @@
     <!-- end navigation -->
 	<!--start page title -->
 	<section id="top-title" class="text-center text-light">
+    <div class="container">
 	    <div class="row">
 	      <div class="col py-5 mt-5">
 	        <h2 class="text-light">Hotline- +8801798051540</h2>
@@ -83,6 +83,7 @@
 	        </p>
 	      </div>
 	    </div>
+      </div>
 	</section>
 	<!--end page title -->
 	<div class="container"> <!-- start container -->
@@ -138,7 +139,7 @@
   </div>	<!-- end container -->
   <div class="row">
     <div class="col-12">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.547222851369!2d90.35151791452535!3d23.799132484565394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c116fe3628f3%3A0xa8457be0c2d7dc01!2sMukto%20Bangla%20Shopping%20Complex!5e0!3m2!1sen!2sbd!4v1573975131051!5m2!1sen!2sbd" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.547222851369!2d90.35151791452535!3d23.799132484565394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c116fe3628f3%3A0xa8457be0c2d7dc01!2sMukto%20Bangla%20Shopping%20Complex!5e0!3m2!1sen!2sbd!4v1573975131051!5m2!1sen!2sbd" frameborder="0" allowfullscreen=""></iframe>
     </div>
   </div>
 </section>
