--- a/drier.html
+++ b/drier.html
@@ -3,7 +3,7 @@
   <head>
     <title>EPI-Comes and receive our service</title>
     <!-- for shortcut icon -->
-    <link rel="shortcut icon" type="image/png" href="img/VITI-Logo.png">
+    <link rel="shortcut icon" type="image/png" href="img/epa.jpg">
     <!-- for various language -->
     <meta charset="utf-8">
     <!-- for author -->
@@ -46,7 +46,7 @@
     <!-- start navigation  -->
     <nav class="navbar res-nav navbar-dark bg-transparent navbar-expand-md fixed-top">
       <div class="container">
-        <a href="index.html" class="navbar-brand"><img src="img/cropped-Logo.png" alt="logo"></a>
+        <a href="index.html" class="navbar-brand"><img src="img/epa.jpg" alt="logo"></a>
         <button class="navbar-toggler navbr-toggler-right" data-toggle='collapse' data-target='#navbarNav'>
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,10 +57,9 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="chemical.html">Chemical</a>
+                <a class="dropdown-item" href="chemical.html">Resin / petrosin</a>
                 <a class="dropdown-item" href="drier.html">Drier</a>
                 <a class="dropdown-item" href="ink.html">Ink industries</a>
-                <a class="dropdown-item" href="pretrosin.html">Petrosin</a>
               </div>
             </li>
             <li class="nav-item"><a class="nav-link" href="gallary.html">Gallery</a></li>
@@ -79,13 +78,11 @@
 	      <div class="col py-5 mt-5">
 	        <h2 class="text-light">VARIOUS TYPE OF DRIER</h2>
 	        <p class="lead">
-	          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, alias?
 	        </p>
 	      </div>
 	    </div>
 	</section>
 	<!--end page title -->
-      <!-- product start -->
     <section class="home-blog">
       <div class="container">
         <!-- sliding social media start-->
@@ -97,59 +94,16 @@
           </div>
         </div>
         <!-- sliding social media end-->
+        <!-- product start -->
         <div class="row">
-          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
-            <div class="card" >
-              <img src="img/taiwan-petrosin.jpg" class="card-img-top" alt="picture">
-              <div class="card-body">
-                <h5 class="card-title">COBALT</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-200kg Dram</p>
-                <a href="cobalt.html" class="btn btn-outline-info mt-3">View more</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
             <div class="card">
-              <img src="img/dark-resin.png" class="card-img-top" alt="picture">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">CALCIUM</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-200kg Dram</p>
-                <a href="calcium.html" class="btn btn-outline-info mt-3">View more</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
-            <div class="card">
-              <img src="img/drier-1.jpg" class="card-img-top" alt="picture">
-              <div class="card-body">
-                <h5 class="card-title">COBALT DRIER</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-227kg</p>
-                <a href="cobalt.html" class="btn btn-outline-info mt-3">View more</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
-            <div class="card" >
-              <img src="img/lead.jpg" class="card-img-top" alt="picture">
-              <div class="card-body">
-                <h5 class="card-title">LEAD DRIER</h5>
+                <h5 class="card-title">ANTI SKINNING B USA</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="lead">Packing-200kg</p>
-                <a href="lead.html" class="btn btn-outline-info mt-3">View more</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
-            <div class="card">
-              <img src="img/petroleum.png" class="card-img-top" alt="picture">
-              <div class="card-body">
-                <h5 class="card-title">PETROLEUM JELLY</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="lead">Packing-200kg</p>
-                <a href="petroleum.html" class="btn btn-outline-info mt-3">View more</a>
+                <a href="drier/antiskiningbusa.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
@@ -157,10 +111,120 @@
             <div class="card">
               <img src="img/calcium.jpg" class="card-img-top" alt="picture">
               <div class="card-body">
-                <h5 class="card-title">CALCIUM DRIER</h5>
+                <h5 class="card-title">BXPB LEAD</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <p class="lead">Packing-200kg</p>
-                <a href="calcium.html" class="btn btn-outline-info mt-3">View more</a>
+                <a href="drier/bxpb.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">CALCIUM 5% USA</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-200kg</p>
+                <a href="drier/calcium5usa.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">COBALT 10% USA</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="drier/cobalt10usa.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">COBALT 6% DUBAI</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-200kg</p>
+                <a href="drier/cobalt6dubai.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">COBALT 6% USA</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-200kg</p>
+                <a href="drier/cobalt6usa.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">LEAD 24% DUBAL</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-200kg</p>
+                <a href="drier/lead24dubai.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">MANGANESE 10% DUBAI</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="drier/manganese10dubai.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">OPTI FOAM DW 5090</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="drier/optifoamdw5090.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">OPTIPERSE O 3844</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="drier/optiperse3844.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">OPTIPERSE O 3854</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-25kg</p>
+                <a href="drier/optiperse3854.html" class="btn btn-outline-info mt-3">View more</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-4 col-sm-6 col-xs-12 mb-3">
+            <div class="card">
+              <img src="img/calcium.jpg" class="card-img-top" alt="picture">
+              <div class="card-body">
+                <h5 class="card-title">ZINC 8% USA</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="lead">Packing-170kg</p>
+                <a href="drier/zinc8usa.html" class="btn btn-outline-info mt-3">View more</a>
               </div>
             </div>
           </div>
